# claudeqt

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md  RELEASE_NOTES.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: dco.yml  linux-appimage.yml  linux-arch.yml  linux-deb.yml  linux-flatpak.yml  linux-rpm.yml  macos-build-x64.yml  macos-build.yml  windows-build-local.yml  windows-build-msvc.yml
cmake/: AppVersion.cmake  ClaudeQtVersion.cmake  FindCmarkGfm.cmake  FindKSyntaxHighlighting.cmake
debian/: changelog  claudeqt-common.install  claudeqt-remote.README.Debian  claudeqt-remote.dirs  claudeqt-remote.install  claudeqt-remote.postinst  claudeqt-remote.postrm  claudeqt-remote.service  claudeqt.README.Debian  claudeqt.install  claudeqt.postinst  control  copyright  rules
debian/tests/: control  desktop-files  launch  remote-service
docs/: RELEASE_NOTES.md  user-guide.md
packaging/flatpak/: org.claudeqt.ClaudeQt.yml
resources/: claudeqt.desktop  claudeqt.menu  resources.qrc
src/app/: CMakeLists.txt  main.cpp
src/persistence/: CMakeLists.txt  instancehub.cpp  instancehub.h  migrations.cpp  migrations.h  persistence.cpp  persistence.h
src/remote/: CMakeLists.txt  main.cpp  remote.conf
src/ui/: CMakeLists.txt  actionregistry.cpp  actionregistry.h  chatinputwidget.cpp  chatinputwidget.h  codeeditor.cpp  codeeditor.h  editorpanewidget.cpp  editorpanewidget.h  mainwindow.cpp  mainwindow.h  messagewindowwidget.cpp  messagewindowwidget.h  projectsessiontreemodel.cpp  projectsessiontreemodel.h  rightclicksplitter.cpp  rightclicksplitter.h  settingsdialog.cpp  settingsdialog.h  theme.cpp  theme.h  themedqtdialog.cpp  themedqtdialog.h
tests/: CMakeLists.txt  hub_child_helper.cpp  test_actionregistry.cpp  test_chatshell.cpp  test_chatsplitter.cpp  test_codeeditor.cpp  test_instancehub.cpp  test_instancehub_ipc.cpp  test_mainwindow.cpp  test_persistence.cpp  test_settingsdialog.cpp  test_theme.cpp  test_themedqtdialog.cpp  test_treecrud.cpp  test_treemodel.cpp
vcpkg-custom-triplets/: arm64-osx-static.cmake  x64-osx-static.cmake  x64-windows-static-md.cmake
